crates/biome_js_analyze/tests/specs/nursery/noPlaywrightForceOption/invalid/click.js
await page.locator('button').click({ force: true });


